src/test/deca/context/invalid/SansObjet/DeclVar-GE-float-float-string.deca
// Description:
//    Declaration of a float variable using >= operation between a float variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    string y = "Everyone"; 
    float z = 2.5 >= "Everyone"; 
}
